# OpenGLPractice

./: .gitignore  CMakeLists.txt
src/: main.cpp
